2008-01-31  Alexander Larsson  <alexl@redhat.com>

	* daemon/soup-input-stream.c:
	Handle errors in send_finish.

2008-01-30  Tomas Bzatek  <tbzatek@redhat.com>

	* daemon/gvfsbackendlocaltest.c:
	Use read/write operations instead of do_copy ()

2008-01-30  Alexander Larsson  <alexl@redhat.com>

        * client/gvfsfusedaemon.c:
	Set read and execute privs for all directories.
	Fix up type when reading can-read etc attributes.
	Don't use uid/gid in the fuse mount. The
	uid/gid doesn't make sense locally anyway.

2008-01-30  Alexander Larsson  <alexl@redhat.com>

        * daemon/gvfsbackend.c:
        (g_vfs_backend_register_mount):
	Correctly detect unset stable name

2008-01-29  Tomas Bzatek  <tbzatek@redhat.com>

	* daemon/gvfsbackendlocaltest.c:
	Fixed error handling in do_enumerate ()
	More cleanup

2008-01-29  Alexander Larsson  <alexl@redhat.com>

        * Makefile.am:
        * configure.ac:
        * gconf/Makefile.am: Added.
        * gconf/gapplookupgconf.[ch]: Added.
        * gconf/gconf-module.c: Added.
	Add gconf based implementation of
	g_app_info_get_default_for_uri_scheme ()

2008-01-29  Alexander Larsson  <alexl@redhat.com>

	* hal/ghalvolumemonitor.c (g_hal_volume_monitor_class_init):
	Remove setting prio/name

2008-01-29  Alexander Larsson  <alexl@redhat.com>

	* configure.ac:
	Require glib 2.15.5 for g_file_query_default_handler ().

        * programs/Makefile.am:
        * programs/gvfs-open.c:
	Added gvfs-open app

2008-01-29  Alexander Larsson  <alexl@redhat.com>

	* configure.ac:
	Post release version bump

=== gvfs 0.1.6 ===

2008-01-29  Alexander Larsson  <alexl@redhat.com>

	* NEWS:
	Update for release

        * daemon/Makefile.am:
	Always dist all .mount.in files
	
2008-01-28  Alexander Larsson  <alexl@redhat.com>

	* configure.ac:
	Post release version bump

=== gvfs 0.1.5 ===

2008-01-28  Alexander Larsson  <alexl@redhat.com>

        * daemon/daemon-main.c:
        * daemon/main.c:
	Include locate.h for setlocale
