@@ -1,5 +1,11 @@
 2008-01-31  Alexander Larsson  <alexl@redhat.com>
 
+        * common/gmountspec.[ch]:
+        Add shared path canonicalization:
+	g_mount_spec_canonicalize_path()
+
+2008-01-31  Alexander Larsson  <alexl@redhat.com>
+
 	* daemon/soup-input-stream.c:
 	Handle errors in send_finish.
 
